--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "eleventy"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.10.0"
+    "@11ty/eleventy": "^0.10.0",
+    "markdown-it": "^11.0.0"
   }
 }
