--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
-    "markdown-it": "^11.0.0"
+    "markdown-it": "^11.0.0",
+    "markdown-it-image-lazy-loading": "^1.0.2"
   }
 }
