--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
+    "image-size": "^0.8.3",
     "markdown-it": "^11.0.0",
-    "markdown-it-image-lazy-loading": "^1.0.2"
+    "markdown-it-attrs": "^3.0.3"
   }
 }
