--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "image-size": "^0.8.3",
     "markdown-it": "^11.0.0",
     "markdown-it-attrs": "^3.0.3"
+  },
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.3"
   }
 }
