--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "build": "eleventy",
     "test": "NODE_ENV=test eleventy"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
     "image-size": "^0.9.3",
@@ -14,6 +22,9 @@
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "eleventy-plugin-accessibility": "github:nickcolley/eleventy-plugin-accessibility"
+    "eleventy-plugin-accessibility": "github:nickcolley/eleventy-plugin-accessibility",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.0",
+    "prettier": "^2.1.2"
   }
 }
