--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     }
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*.{css,md,yml}": [
+      "prettier --write --ignore-unknown"
+    ],
+    "**/*.js": [
+      "prettier --write --ignore-unknown",
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
@@ -23,6 +29,8 @@
   "devDependencies": {
     "cheerio": "^1.0.0-rc.3",
     "eleventy-plugin-accessibility": "github:nickcolley/eleventy-plugin-accessibility",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "prettier": "^2.1.2"
