--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "lint-staged": {
-    "**/*.{css,md,yml}": [
+    "**/*.{css,yml}": [
       "prettier --write --ignore-unknown"
     ],
     "**/*.js": [
