Fail CI build if linter is found in output

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "eleventy --serve",
     "build": "eleventy",
+    "test:ci": "npm run test 2>&1 | tee -a /tmp/ci-output.txt; if grep -Fq 'Linter' /tmp/ci-output.txt; then exit 1; fi",
     "test": "NODE_ENV=test eleventy"
   },
   "husky": {
